devops/k8s/expense-workflow/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: expense-workflow
  namespace: devops-ssd-assignment
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: expense-workflow.localhost
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: expense-workflow
                port:
                  number: 80
